@@ -10,7 +10,7 @@ Gem::Specification.new do |spec|
   spec.description = <<~DESC
     WebTranslateIt-Safe is a simple tool to backup databases (MySQL and PostgreSQL) and just files.
     Backups can be stored locally or remotely and can be enctypted.
-    Remote storage is supported on Amazon S3, Rackspace Cloud Files, or just plain FTP/SFTP.
+    Remote storage is supported on Amazon S3, Rackspace Cloud Files, or just plain SFTP.
   DESC
   spec.summary       = 'Backup filesystem and databases (MySQL and PostgreSQL) locally or to a remote server/service (with encryption)'
   spec.homepage      = 'http://github.com/webtranslateit/safe'
