@@ -1,6 +1,7 @@
 ## Edge
 
 * Remove svndump feature.
+* Remove FTP transfer feature.
 
 ## 0.4.7 - 2023-06-30
 
